--- a/ee_vulkan/ee_vulkan.vcxproj
+++ b/ee_vulkan/ee_vulkan.vcxproj
@@ -145,8 +145,13 @@
     <ClCompile Include="src\Renderer\Camera\CameraController.cpp" />
     <ClCompile Include="src\Renderer\Mesh\SkinnedMesh.cpp" />
     <ClCompile Include="src\Utils\Utils.cpp" />
-    <ClCompile Include="src\Vulkan\Device.cpp" />
-    <ClCompile Include="src\Vulkan\Instance.cpp" />
+    <ClCompile Include="src\Vulkan\Core\Device.cpp" />
+    <ClCompile Include="src\Vulkan\Core\Instance.cpp" />
+    <ClCompile Include="src\Vulkan\Core\RenderPass.cpp" />
+    <ClCompile Include="src\Vulkan\Core\RenderPipeline.cpp" />
+    <ClCompile Include="src\Vulkan\Core\Surface.cpp" />
+    <ClCompile Include="src\Vulkan\Core\Swapchain.cpp" />
+    <ClCompile Include="src\Vulkan\RenderObject\ShaderModule.cpp" />
     <ClCompile Include="src\Vulkan\VulkanContext.cpp" />
     <ClCompile Include="src\Window\Window.cpp" />
   </ItemGroup>
@@ -161,8 +166,13 @@
     <ClInclude Include="src\Renderer\Mesh\SkinnedMesh.h" />
     <ClInclude Include="src\Singleton\Singleton.h" />
     <ClInclude Include="src\Utils\Utils.h" />
-    <ClInclude Include="src\Vulkan\Device.h" />
-    <ClInclude Include="src\Vulkan\Instance.h" />
+    <ClInclude Include="src\Vulkan\Core\Device.h" />
+    <ClInclude Include="src\Vulkan\Core\Instance.h" />
+    <ClInclude Include="src\Vulkan\Core\RenderPass.h" />
+    <ClInclude Include="src\Vulkan\Core\RenderPipeline.h" />
+    <ClInclude Include="src\Vulkan\Core\Surface.h" />
+    <ClInclude Include="src\Vulkan\Core\Swapchain.h" />
+    <ClInclude Include="src\Vulkan\RenderObject\ShaderModule.h" />
     <ClInclude Include="src\Vulkan\VulkanContext.h" />
     <ClInclude Include="src\Window\Window.h" />
   </ItemGroup>
